# galaxy-collection-to-rpm

./: MANIFEST.in  README.rst  galaxy-collection-to-rpm.py  requirements.txt  setup.cfg  setup.py  template.j2
galaxycollection_to_rpm/: galaxycollection_to_rpm.py
galaxycollection_to_rpm/data/: template.j2
