[metadata]
name = galaxy-collection-to-rpm
summary = Create RPM spec for an Ansible Galaxy collection
description-file = 
    README.rst
author = Javier Peña
author-email = jpena@redhat.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    galaxycollection_to_rpm

data_files =
    share/galaxy-collection-to-rpm = template.j2

[entry_points]
console_scripts =
    galaxy-collection-to-rpm = galaxycollection_to_rpm.galaxycollection_to_rpm:main

